# snake_rust

./: .gitignore  Cargo.toml  data_vis.ipynb  scratch  snake_model.st  snake_model_yay.st  train_log.csv
models/: snake_model_100.st  snake_model_200.st  snake_model_300.st
models/baseline/: snake_model_100.st  snake_model_1000.st  snake_model_1100.st  snake_model_1200.st  snake_model_1300.st  snake_model_1400.st  snake_model_1500.st  snake_model_1600.st  snake_model_200.st  snake_model_300.st  snake_model_400.st  snake_model_500.st  snake_model_600.st  snake_model_700.st  snake_model_800.st  snake_model_900.st  train_log.csv
models/baseline_no_decay/: snake_model_100.st  snake_model_1000.st  snake_model_1100.st  snake_model_200.st  snake_model_300.st  snake_model_400.st  snake_model_500.st  snake_model_600.st  snake_model_700.st  snake_model_800.st  snake_model_900.st  train_log.csv
models/baseline_no_decay_001_lr/: snake_model_100.st  snake_model_200.st  snake_model_300.st  snake_model_400.st  snake_model_500.st  snake_model_600.st  snake_model_700.st  train_log.csv
src/: config.rs  connector.rs  human.rs  lib.rs  main.rs  multithread.rs  normal.rs  timer.rs
src/game/: mod.rs
src/model/: mod.rs  seq.rs
website/: Cargo.toml  snake_model.st
website/src/: main.rs
