[package]
name = "snake_rust"
version = "0.1.0"
edition = "2021"
default-run = "multithread"

[[bin]]

name="snake"
path = "src/main.rs"
[[bin]]
name="multithread"
path = "src/multithread.rs"
[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", features = ["cuda"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", features = ["cuda"] }
macroquad = "0.4.13"
nalgebra = "0.33.0"
num-traits = "0.2.19"
rand = "0.8.5"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
