[package]
name = "snake_rust"
version = "0.1.0"
edition = "2021"
default-run = "multithread"

[[bin]]
name = "snake"
path = "src/main.rs"

[[bin]]
name = "multithread"
path = "src/multithread.rs"

[[bin]]
name = "human"
path = "src/human.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
macroquad = "0.4.13"
nalgebra = "0.33.0"
num-traits = "0.2.19"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[features]
# Define a feature for CUDA support
cuda = ["candle-core/cuda", "candle-nn/cuda"]

# Define a feature for Metal support
metal = ["candle-core/metal", "candle-nn/metal"]

default=[
    "cuda"
]
