[package]
name = "snake_rust"
version = "0.1.0"
edition = "2021"
default-run = "multithread"


[lib]


[[bin]]
name = "snake"
path = "src/main.rs"

[[bin]]
name = "multithread"
path = "src/multithread.rs"

[[bin]]
name = "human"
path = "src/human.rs"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", default-features = false }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.7.1", default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
derive_more = { version = "1.0.0", features = ["add", "add_assign", "mul"] }
macroquad = {version="0.4.13"}
nalgebra = "0.33.0"
num-traits = "0.2.19"
rand = {version="0.8.5"}
serde = { version = "1.0.210", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
getrandom = {version = "*",features = ["js"]}
[features]
# Define a feature for CUDA support
cuda = ["candle-core/cudnn", "candle-nn/cuda"]

# Define a feature for Metal support
metal = ["candle-core/metal", "candle-nn/metal"]
wasm = []
default=[
 "metal"
]
